--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -36,6 +36,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding-left: 2rem;
+    box-sizing: border-box;
 }
 
 .button {
@@ -56,4 +57,25 @@ body {
 #nsection-button {
     border-color: var(--tolboolist-mediumlight);
     color: var(--tolboolist-mediumlight);
+}
+
+#main-container {
+    width: 80%;
+    margin-top: 0.3rem;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: var(--tolboolist-light);
+    box-sizing: border-box;
+}
+
+.macrolist {
+    list-style: none;
+    margin-left: 0;
+    padding-left: 2rem;
+}
+
+.childlist {
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
 }
