padding of macrolist

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -74,7 +74,7 @@ body {
 .macrolist {
     list-style: none;
     margin-left: 0;
-    padding-left: 2rem;
+    padding: 2rem 2rem;
 }
 
 .childlist {
